--- a/_posts/2022-06-14-first-post.html
+++ b/_posts/2022-06-14-first-post.html
@@ -5,5 +5,5 @@ date:   2022-06-14 15:15:25 -0600
 ---
 
 <p>
-I'm trying to start a new blog to host my thoughts on all sorts of stuff!!
+I am trying to start a new blog to host my thoughts on all sorts of stuff!!
 </p>
